Revert "[REMOVE] removed old connection browser completely. connect to url. and invite people from pasteboard is now totally missing."
This reverts commit 18a736f8e1c726711ed78ad73d4fc90dd173ee55.

--- a/SubEthaEdit-Mac/German.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/German.lproj/MainMenu.xib
@@ -1009,12 +1009,12 @@
                             </menuItem>
                             <menuItem title="Verbindungen" keyEquivalent="k" id="231">
                                 <connections>
-                                    <action selector="showDocumentNetworkBrowser:" target="-1" id="G0R-p7-5cc"/>
+                                    <action selector="showWindow:" target="631" id="634"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Verbindungen" alternate="YES" keyEquivalent="K" id="640">
                                 <connections>
-                                    <action selector="showDocumentNetworkBrowser:" target="-1" id="N2h-iF-nOi"/>
+                                    <action selector="showWindow:" target="631" id="641"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Statistik" keyEquivalent="i" id="635">
@@ -2072,6 +2072,7 @@ Cg
                 </subviews>
             </view>
         </window>
+        <customObject id="631" userLabel="ConnectionBrowserController" customClass="ConnectionBrowserController"/>
     </objects>
     <resources>
         <image name="NSApplicationIcon" width="128" height="128"/>
