--- a/SubEthaEdit-Mac/English.lproj/ConnectionBrowser.xib
+++ b/SubEthaEdit-Mac/English.lproj/ConnectionBrowser.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C62" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="ConnectionBrowserController">
+        <customObject id="-2" userLabel="File's Owner" customClass="SEEConnectionManager">
             <connections>
                 <outlet property="O_actionPullDownButton" destination="33" id="36"/>
                 <outlet property="O_addressComboBox" destination="14" id="31"/>
