--- a/SubEthaEdit-Mac/SEENetworkBrowser.xib
+++ b/SubEthaEdit-Mac/SEENetworkBrowser.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C62" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5051" systemVersion="13C62" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5051"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEENetworkBrowser">
@@ -9,29 +9,28 @@
                 <outlet property="collectionViewArrayController" destination="uFK-2L-HLP" id="f9J-wa-LLI"/>
                 <outlet property="filesOwnerProxy" destination="iXX-4h-P4x" id="yJ9-JU-HvF"/>
                 <outlet property="tableView" destination="btu-v5-80w" id="CHf-jn-2LM"/>
-                <outlet property="userImageViewPrototype" destination="0Rh-MB-7TX" id="u9n-Bw-jaS"/>
                 <outlet property="window" destination="1" id="3"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" wantsToBeColor="NO" visibleAtLaunch="NO" animationBehavior="default" id="1">
+        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="1">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES"/>
             <rect key="contentRect" x="196" y="240" width="300" height="400"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
             <value key="minSize" type="size" width="180" height="140"/>
-            <view key="contentView" wantsLayer="YES" id="2">
+            <view key="contentView" id="2">
                 <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView autohidesScrollers="YES" horizontalLineScroll="38" horizontalPageScroll="10" verticalLineScroll="38" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRg-fN-a9P">
+                    <scrollView autohidesScrollers="YES" horizontalLineScroll="48" horizontalPageScroll="10" verticalLineScroll="48" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRg-fN-a9P">
                         <rect key="frame" x="0.0" y="60" width="300" height="340"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <clipView key="contentView" id="wIJ-zF-6Fn">
                             <rect key="frame" x="1" y="1" width="298" height="338"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" columnReordering="NO" columnResizing="NO" autosaveColumns="NO" rowHeight="36" rowSizeStyle="automatic" viewBased="YES" id="btu-v5-80w">
+                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" columnReordering="NO" columnResizing="NO" autosaveColumns="NO" rowHeight="46" rowSizeStyle="automatic" viewBased="YES" id="btu-v5-80w">
                                     <rect key="frame" x="0.0" y="0.0" width="298" height="338"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
@@ -51,12 +50,12 @@
                                             </textFieldCell>
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             <prototypeCellViews>
-                                                <tableCellView identifier="Group" wantsLayer="YES" id="7GF-iT-703">
-                                                    <rect key="frame" x="1" y="1" width="295" height="36"/>
+                                                <tableCellView identifier="Group" id="7GF-iT-703">
+                                                    <rect key="frame" x="1" y="1" width="295" height="46"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="99d-xq-E7k">
-                                                            <rect key="frame" x="3" y="10" width="232" height="17"/>
+                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="99d-xq-E7k">
+                                                            <rect key="frame" x="18" y="12" width="217" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="qbm-n8-qcN">
                                                                 <font key="font" metaFont="system"/>
@@ -67,42 +66,37 @@
                                                                 <binding destination="7GF-iT-703" name="value" keyPath="objectValue.fileName" id="OpA-rz-52D"/>
                                                             </connections>
                                                         </textField>
-                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Rh-MB-7TX">
-                                                            <rect key="frame" x="230" y="-32" width="64" height="64"/>
+                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Rh-MB-7TX">
+                                                            <rect key="frame" x="241" y="2" width="42" height="42"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="42" id="kq1-wh-XUY"/>
+                                                            </constraints>
                                                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSUserGuest" id="D2v-Nd-6Ob"/>
                                                             <connections>
                                                                 <binding destination="7GF-iT-703" name="value" keyPath="objectValue.fileIcon" id="ZgP-UC-ZIQ"/>
                                                             </connections>
                                                         </imageView>
                                                     </subviews>
-                                                    <backgroundFilters>
-                                                        <ciFilter name="CIGaussianBlur">
-                                                            <configuration>
-                                                                <null key="inputImage"/>
-                                                                <real key="inputRadius" value="10"/>
-                                                            </configuration>
-                                                        </ciFilter>
-                                                        <ciFilter name="CIColorControls">
-                                                            <configuration>
-                                                                <real key="inputBrightness" value="0.0"/>
-                                                                <real key="inputContrast" value="1"/>
-                                                                <null key="inputImage"/>
-                                                                <real key="inputSaturation" value="4"/>
-                                                            </configuration>
-                                                        </ciFilter>
-                                                    </backgroundFilters>
+                                                    <constraints>
+                                                        <constraint firstItem="0Rh-MB-7TX" firstAttribute="top" secondItem="7GF-iT-703" secondAttribute="top" constant="2" id="6d6-ua-HIo"/>
+                                                        <constraint firstItem="0Rh-MB-7TX" firstAttribute="leading" secondItem="99d-xq-E7k" secondAttribute="trailing" constant="8" symbolic="YES" id="7P3-Eo-Ni4"/>
+                                                        <constraint firstItem="99d-xq-E7k" firstAttribute="top" secondItem="7GF-iT-703" secondAttribute="top" constant="17" id="Onn-yg-SHe"/>
+                                                        <constraint firstAttribute="trailing" secondItem="0Rh-MB-7TX" secondAttribute="trailing" constant="12" id="dZt-Kr-fIw"/>
+                                                        <constraint firstItem="99d-xq-E7k" firstAttribute="leading" secondItem="7GF-iT-703" secondAttribute="leading" constant="20" id="g36-71-4D0"/>
+                                                        <constraint firstItem="0Rh-MB-7TX" firstAttribute="centerY" secondItem="7GF-iT-703" secondAttribute="centerY" id="yOd-r4-3rW"/>
+                                                    </constraints>
                                                     <connections>
                                                         <outlet property="imageView" destination="0Rh-MB-7TX" id="zvU-lA-c31"/>
                                                         <outlet property="textField" destination="99d-xq-E7k" id="QnQ-Yw-dNe"/>
                                                     </connections>
                                                 </tableCellView>
                                                 <tableCellView identifier="Document" id="l0C-OX-d9H">
-                                                    <rect key="frame" x="1" y="39" width="295" height="17"/>
+                                                    <rect key="frame" x="1" y="49" width="295" height="28"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qp7-Vm-djo">
-                                                            <rect key="frame" x="3" y="0.0" width="17" height="17"/>
+                                                            <rect key="frame" x="3" y="3" width="22" height="22"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="LM5-yn-0zM"/>
                                                             <connections>
@@ -110,7 +104,7 @@
                                                             </connections>
                                                         </imageView>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3Bt-0B-b5J">
-                                                            <rect key="frame" x="25" y="0.0" width="270" height="17"/>
+                                                            <rect key="frame" x="25" y="6" width="270" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="4t0-UR-tOR">
                                                                 <font key="font" metaFont="system"/>
@@ -177,14 +171,14 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="0yq-G0-zEs" firstAttribute="top" secondItem="qRg-fN-a9P" secondAttribute="bottom" constant="19" id="8Gb-CH-shm"/>
-                    <constraint firstItem="qRg-fN-a9P" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="KIe-Ll-FKQ"/>
-                    <constraint firstItem="jUb-G5-9UV" firstAttribute="baseline" secondItem="0yq-G0-zEs" secondAttribute="baseline" id="Xxj-BA-1JV"/>
-                    <constraint firstItem="0yq-G0-zEs" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="20" symbolic="YES" id="aym-aU-dJu"/>
-                    <constraint firstAttribute="trailing" secondItem="jUb-G5-9UV" secondAttribute="trailing" constant="20" symbolic="YES" id="bAH-9h-Zd0"/>
-                    <constraint firstItem="qRg-fN-a9P" firstAttribute="top" secondItem="2" secondAttribute="top" id="jBo-Qk-pl7"/>
-                    <constraint firstAttribute="bottom" secondItem="0yq-G0-zEs" secondAttribute="bottom" constant="20" symbolic="YES" id="jRr-hr-Awt"/>
-                    <constraint firstItem="qRg-fN-a9P" firstAttribute="centerX" secondItem="2" secondAttribute="centerX" id="tjI-WR-oun"/>
+                    <constraint firstItem="0yq-G0-zEs" firstAttribute="top" secondItem="qRg-fN-a9P" secondAttribute="bottom" constant="19" id="AeY-q2-4RW"/>
+                    <constraint firstAttribute="bottom" secondItem="0yq-G0-zEs" secondAttribute="bottom" constant="20" symbolic="YES" id="LaF-Xg-XjO"/>
+                    <constraint firstItem="0yq-G0-zEs" firstAttribute="baseline" secondItem="jUb-G5-9UV" secondAttribute="baseline" id="TYC-Uf-HZc"/>
+                    <constraint firstItem="qRg-fN-a9P" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="UhA-Ei-YtJ"/>
+                    <constraint firstAttribute="trailing" secondItem="jUb-G5-9UV" secondAttribute="trailing" constant="20" symbolic="YES" id="Z8P-o9-UBR"/>
+                    <constraint firstItem="0yq-G0-zEs" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="20" symbolic="YES" id="el7-a9-FYN"/>
+                    <constraint firstItem="qRg-fN-a9P" firstAttribute="top" secondItem="2" secondAttribute="top" id="niL-RR-Lpa"/>
+                    <constraint firstItem="qRg-fN-a9P" firstAttribute="centerX" secondItem="2" secondAttribute="centerX" id="zXa-IT-RL5"/>
                 </constraints>
             </view>
             <connections>
